<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/dashboardFragment"
            android:title="@string/nav_dashboard"
            android:icon="@android:drawable/ic_menu_compass" />
        <item android:id="@+id/pdvFragment"
            android:title="@string/nav_pdv"
            android:icon="@android:drawable/ic_menu_manage" />
        <item android:id="@+id/productsFragment"
            android:title="@string/nav_produtos"
            android:icon="@android:drawable/ic_menu_agenda" />
        <item android:id="@+id/clientsFragment"
            android:title="@string/nav_clientes"
            android:icon="@android:drawable/ic_menu_myplaces" />
        <item android:id="@+id/suppliersFragment"
            android:title="@string/nav_fornecedores"
            android:icon="@android:drawable/ic_menu_my_calendar" />
        <item android:id="@+id/historyFragment"
            android:title="@string/nav_historico"
            android:icon="@android:drawable/ic_menu_recent_history" />
        <item android:id="@+id/reportsFragment"
            android:title="@string/nav_relatorios"
            android:icon="@android:drawable/ic_menu_report_image" />
        <item android:id="@+id/settingsFragment"
            android:title="@string/nav_configuracoes"
            android:icon="@android:drawable/ic_menu_preferences" />
    </group>
    <item android:id="@+id/action_logout"
        android:title="@string/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off" />
</menu>
