<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="12dp"
        android:hint="@string/label_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etName"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="12dp"
        android:hint="@string/label_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etAddress"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/label_debt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/etDebt"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:text="0" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
